tdf#137430, tdf#137855: Revert "SwTOXBaseSection::UpdateMarks:

SwIterator no more ..."

This reverts commit 69d903c59729deb9f9824929bb31e4256f09025b.

Change-Id: I351c83c5097df02f768e0eff0a265540a008ead8